Updated swagger to v3.  Compiles, but not yet tested